"report check in 2018-09-27"

--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -14,7 +14,7 @@ Run date: 2018-09-27
 Cloning into 'think-java-aliyaaware'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -71,7 +71,7 @@ Cloning into 'think-java-aliyaaware'...
 
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
+[ASSIGNMENT DONE] Think Java: 1
           [SCORE] <font face="verdana" color="green">1.00</font>
 
 </pre></body></html>
