--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -14,7 +14,7 @@ Run date: 2018-09-27
 Cloning into 'think-java-heypoppins'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -31,7 +31,7 @@ Cloning into 'think-java-heypoppins'...
   [EXPECTING TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
+[ASSIGNMENT DONE] Think Java: 1
           [SCORE] 0.00
 
 </pre></body></html>
