--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -14,7 +14,7 @@ Run date: 2018-09-27
 Cloning into 'think-java-1amsmith1020'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -69,7 +69,7 @@ Cloning into 'think-java-1amsmith1020'...
 	
 [SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
+[ASSIGNMENT DONE] Think Java: 1
           [SCORE] <font face="verdana" color="green">0.90</font>
 
 </pre></body></html>
