--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -14,7 +14,7 @@ Run date: 2018-09-27
 Cloning into 'think-java-KaylaRidesBikes'...
 	
 [GITWORK DONE]
-[Assignment]  >asignment_1<
+[Assignment]  >Think Java: 1<
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -55,7 +55,7 @@ Cloning into 'think-java-KaylaRidesBikes'...
 
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
-[ASSIGNMENT DONE] asignment_1
+[ASSIGNMENT DONE] Think Java: 1
           [SCORE] 0.60
 
 </pre></body></html>
