"report check in 2018-09-29"

--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-27
+Run date: 2018-09-29
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -7,56 +7,18 @@ Run date: 2018-09-27
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[PRE-WARN]: Expected non-empty: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
-Cloning into 'think-java-asianaaron2'...
-	
-[GITWORK DONE]
-[Assignment]  >Think Java: 1<
-  [DESC] First Assignment, Ch2-Ch4
+[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK] Re-using code.
+[Assignment]  >Think Java: 3<
+  [DESC] Third Assignment, Swettercise
 
-*[BEGIN chapter2]
-  [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] Missing Compile Target:Exercise3.java
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-	[ERROR] Runtime Error @ java Multadd
-
-[SUMMARY] ['Multadd: RUNTIME ERROR']
-[DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
-          [SCORE] 0.55
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Swettercise']]
+[COMPILING] Swettercise.java
+	[ERROR] Missing Compile Target:Swettercise.java
+[SUMMARY] ['Swettercise: COMPILE ERROR']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 3
+          [SCORE] <font face="verdana" color="green">0.90</font>
 
 </pre></body></html>
