--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-27
+Run date: 2018-09-29
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -7,71 +7,50 @@ Run date: 2018-09-27
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[SETUP] Creating student dir:  ./stuwork/AdamRashid
-[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
-Cloning into 'think-java-AdamRashid'...
+[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK] Re-using code.
+[Assignment]  >Think Java: 3<
+  [DESC] Third Assignment, Swettercise
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Swettercise']]
+[COMPILING] Swettercise.java
+	[SUCCESSFUL COMPILE] Swettercise.java
+[COMPILING] SwetterciseTest.java
+	[SUCCESSFUL COMPILE] SwetterciseTest.java
+[RUNNING] SwetterciseTest
+-->
+
+	<br>Results for reverseStr()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	
-[GITWORK DONE]
-[Assignment]  >Think Java: 1<
-  [DESC] First Assignment, Ch2-Ch4
-
-*[BEGIN chapter2]
-  [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-
+	<br>Results for collatzThis()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">6, 3, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">2, 1</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	</table><br>
+	
+	<br>Results for isPrime()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.11]
+	
+	
 <--
 	[OUTPUT OK]
 
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Date: PASS', 'Time: PASS']
-[DONE chapter2]
-
-*[BEGIN chapter3]
-  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
-[DONE chapter3]
-
-*[BEGIN chapter4]
-  [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-
-<--
-	[OUTPUT OK]
-
-[SUMMARY] ['Multadd: PASS']
-[DONE chapter4]
-[ASSIGNMENT DONE] Think Java: 1
-          [SCORE] <font face="verdana" color="green">1.00</font>
+[SUMMARY] ['Swettercise: PASS']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 3
+          [SCORE] <font face="verdana" color="green">0.89</font>
 
 </pre></body></html>
