"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -7,8 +7,72 @@ Run date: 2018-09-29
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK] Re-using code.
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[PRE-WARN]: Expected non-empty: ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
+Cloning into 'think-java-AdamRashid'...
+	
+[GITWORK DONE]
+[Assignment]  >Think Java: 1<
+  [DESC] First Assignment, Ch2-Ch4
+
+*[BEGIN chapter2]
+  [EXPECTING TARGETS] ['Date', 'Time']]
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Date: PASS', 'Time: PASS']
+[DONE chapter2]
+
+*[BEGIN chapter3]
+  [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[DONE chapter3]
+
+*[BEGIN chapter4]
+  [EXPECTING TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
+[DONE chapter4]
+[ASSIGNMENT DONE] Think Java: 1
+          [SCORE] <font face="verdana" color="green">1.00</font>
 [Assignment]  >Think Java: 3<
   [DESC] Third Assignment, Swettercise
 
