"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -14,7 +14,8 @@ Run date: 2018-09-29
 Cloning into 'think-java-AdamRashid'...
 	
 [GITWORK DONE]
-[Assignment]  >Think Java: 1<
+
+<b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -72,8 +73,9 @@ Cloning into 'think-java-AdamRashid'...
 [SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-          [SCORE] <font face="verdana" color="green">1.00</font>
-[Assignment]  >Think Java: 3<
+<b>          [SCORE] <font color="green">1.00</font></b>
+
+<b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
@@ -115,6 +117,6 @@ Cloning into 'think-java-AdamRashid'...
 [SUMMARY] ['Swettercise: PASS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-          [SCORE] <font face="verdana" color="green">0.89</font>
+<b>          [SCORE] <font color="green">0.89</font></b>
 
 </pre></body></html>
