--- a/stureports/think-java/asianaaron2.think-java_results.html
+++ b/stureports/think-java/asianaaron2.think-java_results.html
@@ -14,7 +14,8 @@ Run date: 2018-09-29
 Cloning into 'think-java-asianaaron2'...
 	
 [GITWORK DONE]
-[Assignment]  >Think Java: 1<
+
+<b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -58,8 +59,9 @@ Cloning into 'think-java-asianaaron2'...
 [SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-          [SCORE] 0.55
-[Assignment]  >Think Java: 3<
+<b>          [SCORE] 0.55</b>
+
+<b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
 *[BEGIN chapter6]
@@ -69,6 +71,6 @@ Cloning into 'think-java-asianaaron2'...
 [SUMMARY] ['Swettercise: COMPILE ERROR']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-          [SCORE] 0.60
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
