"report check in 2018-09-29"

--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-27
+Run date: 2018-09-29
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -14,7 +14,8 @@ Run date: 2018-09-27
 Cloning into 'think-java-DrKiefer'...
 	
 [GITWORK DONE]
-[Assignment]  >Think Java: 1<
+
+<b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -70,6 +71,18 @@ Cloning into 'think-java-DrKiefer'...
 [SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-          [SCORE] <font face="verdana" color="green">0.95</font>
+<b>          [SCORE] <font color="green">0.95</font></b>
+
+<b>[Assignment]  >Think Java: 3< </b>
+  [DESC] Third Assignment, Swettercise
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Swettercise']]
+[COMPILING] Swettercise.java
+	[SUCCESSFUL COMPILE] Swettercise.java
+[SUMMARY] ['Swettercise: COMPILE ERROR']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 3
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
