--- a/stureports/think-java/slammensam.think-java_results.html
+++ b/stureports/think-java/slammensam.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-27
+Run date: 2018-09-29
 <br>Student User: slammensam
 <br>Project: think-java
 <br>
@@ -14,7 +14,8 @@ Run date: 2018-09-27
 Cloning into 'think-java-slammensam'...
 	
 [GITWORK DONE]
-[Assignment]  >Think Java: 1<
+
+<b>[Assignment]  >Think Java: 1< </b>
   [DESC] First Assignment, Ch2-Ch4
 
 *[BEGIN chapter2]
@@ -61,6 +62,16 @@ Cloning into 'think-java-slammensam'...
 [SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
-          [SCORE] 0.50
+<b>          [SCORE] 0.20</b>
+
+<b>[Assignment]  >Think Java: 3< </b>
+  [DESC] Third Assignment, Swettercise
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Swettercise']]
+	[ERROR] No chapter work for:chapter6
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 3
+<b>          [SCORE] 0.60</b>
 
 </pre></body></html>
