"report check in 2018-09-29"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -48,7 +48,7 @@ Cloning into 'think-java-Crevin921'...
   [EXPECTING TARGETS] ['Multadd']]
 [COMPILING] Multadd.java
 	[SUCCESSFUL COMPILE] Multadd.java
-[SUMMARY] ['Multadd: PASS']
+[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.50</b>
