--- a/stureports/think-java/DrKiefer.think-java_results.html
+++ b/stureports/think-java/DrKiefer.think-java_results.html
@@ -36,7 +36,7 @@ Cloning into 'think-java-DrKiefer'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASS', 'Time: PASS']
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -57,7 +57,7 @@ Cloning into 'think-java-DrKiefer'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
