--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -30,7 +30,7 @@ Cloning into 'think-java-Jake4902'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: MISSING', 'Time: PASS']
+[SUMMARY] ['Date: MISSING', 'Time: RAN, BUT TOO MANY ERRORS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -51,7 +51,7 @@ Cloning into 'think-java-Jake4902'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[SUMMARY] ['Exercise3: RAN, BUT TOO MANY ERRORS', 'Exercise4: RAN, BUT TOO MANY ERRORS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -64,7 +64,7 @@ Cloning into 'think-java-Jake4902'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASS']
+[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.80</b>
