--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -36,7 +36,7 @@ Cloning into 'think-java-ReidLuhn'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASS', 'Time: PASS']
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -57,7 +57,7 @@ Cloning into 'think-java-ReidLuhn'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[SUMMARY] ['Exercise3: PASSED, EXCELLENT!', 'Exercise4: PASSED, EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -70,7 +70,7 @@ Cloning into 'think-java-ReidLuhn'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASS']
+[SUMMARY] ['Multadd: PASSED, EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
@@ -114,7 +114,7 @@ Cloning into 'think-java-ReidLuhn'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Swettercise: PASS']
+[SUMMARY] ['Swettercise: PASSED, GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
 <b>          [SCORE] <font color="green">0.94</font></b>
