--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -30,7 +30,7 @@ Cloning into 'think-java-coleschomer'...
 
 [COMPILING] Time.java
 	[ERROR] Missing Compile Target:Time.java
-[SUMMARY] ['Date: PASS', 'Time: MISSING']
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: MISSING']
 [DONE chapter2]
 
 *[BEGIN chapter3]
