--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -45,7 +45,7 @@ Cloning into 'think-java-heypoppins'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
+[SUMMARY] ['Exercise3: RAN, BUT TOO MANY ERRORS', 'Exercise4: RAN, BUT TOO MANY ERRORS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
@@ -58,7 +58,7 @@ Cloning into 'think-java-heypoppins'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASS']
+[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.60</b>
