--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -36,7 +36,7 @@ Cloning into 'think-java-bethtojatjar'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASS', 'Time: PASS']
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
