--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -36,7 +36,7 @@ Cloning into 'think-java-maxckaeh'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Date: PASS', 'Time: PASS']
+[SUMMARY] ['Date: PASSED, EXCELLENT!', 'Time: PASSED, EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -58,7 +58,7 @@ Cloning into 'think-java-maxckaeh'...
 <--
 	[OUTPUT OK]
 
-[SUMMARY] ['Multadd: PASS']
+[SUMMARY] ['Multadd: RAN, BUT TOO MANY ERRORS']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.60</b>
