"report check in 2018-09-29"

--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -106,9 +106,10 @@ Cloning into 'think-java-AdamRashid'...
 	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.11]
+	[deductions=0.13999999999999999]
 	
 	
 <--
@@ -117,6 +118,6 @@ Cloning into 'think-java-AdamRashid'...
 [SUMMARY] ['Swettercise: PASSED, BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: 3
-<b>          [SCORE] <font color="green">0.89</font></b>
+<b>          [SCORE] <font color="green">0.86</font></b>
 
 </pre></body></html>
