"report check in 2018-09-29"

--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -71,6 +71,24 @@ Cloning into 'think-java-bealarson82'...
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.15</b>
 
+<b>[Assignment]  >Think Java: 2< </b>
+  [DESC] Second Assignment, Ch 6
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+[COMPILING] Exercise4.java
+	[ERROR] javac failed Exercise4.java Exercise4.java:1: error: class exercise4 is public, should be declared in a file named exercise4.java
+	public class exercise4 {
+	       ^
+	1 error
+	
+[COMPILING] Exercise5.java
+	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 2
+<b>          [SCORE] 0.20</b>
+
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
