--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -69,6 +69,16 @@ Cloning into 'think-java-Jake4902'...
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.80</b>
 
+<b>[Assignment]  >Think Java: 2< </b>
+  [DESC] Second Assignment, Ch 6
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+	[ERROR] No chapter work for:chapter6
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 2
+<b>          [SCORE] 0.60</b>
+
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
