--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -75,6 +75,20 @@ Cloning into 'think-java-NickPoletti1'...
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
+<b>[Assignment]  >Think Java: 2< </b>
+  [DESC] Second Assignment, Ch 6
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[COMPILING] Exercise5.java
+	[SUCCESSFUL COMPILE] Exercise5.java
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 2
+<b>          [SCORE] 0.20</b>
+
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
