--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -75,6 +75,16 @@ Cloning into 'think-java-gaberoessler'...
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] <font color="green">1.00</font></b>
 
+<b>[Assignment]  >Think Java: 2< </b>
+  [DESC] Second Assignment, Ch 6
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+	[ERROR] No chapter work for:chapter6
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 2
+<b>          [SCORE] 0.60</b>
+
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
