--- a/stureports/think-java/notswett.think-java_results.html
+++ b/stureports/think-java/notswett.think-java_results.html
@@ -37,6 +37,20 @@ Cloning into 'think-java-notswett'...
 [ASSIGNMENT DONE] Think Java: 1
 <b>          [SCORE] 0.00</b>
 
+<b>[Assignment]  >Think Java: 2< </b>
+  [DESC] Second Assignment, Ch 6
+
+*[BEGIN chapter6]
+  [EXPECTING TARGETS] ['Exercise4', 'Exercise5']]
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[COMPILING] Exercise5.java
+	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: COMPILE ERROR', 'Exercise5: COMPILE ERROR']
+[DONE chapter6]
+[ASSIGNMENT DONE] Think Java: 2
+<b>          [SCORE] 0.20</b>
+
 <b>[Assignment]  >Think Java: 3< </b>
   [DESC] Third Assignment, Swettercise
 
